  * icmpv6: Avoid ABI change in 4.9.259
  * zsmalloc: Ignore ABI changes
  * nft_reject: Ignore ABI changes
  * Revert "ACPI: scan: Use unique number for instance_no" to avoid ABI
    change
  * net: Avoid ABI change in 4.9.264
  * staging: Ignore ABI changes
  * tun: Ignore ABI changes
  * debian/patches/features/all/rt/genpatch.py: Change argument parsing to use
    argparse

 -- Ben Hutchings <benh@debian.org>  Fri, 26 Mar 2021 01:42:04 +0100

linux (4.9.258-1) stretch-security; urgency=high

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.247
    - perf event: Check ref_reloc_sym before using it
    - mm/userfaultfd: do not access vma->vm_mm after calling handle_userfault()
    - btrfs: fix lockdep splat when reading qgroup config on mount
    - PCI: Add device even if driver attach failed
    - btrfs: tree-checker: Enhance chunk checker to validate chunk profile
      (CVE-2019-19816)
    - btrfs: inode: Verify inode mode to avoid NULL pointer dereference
      (CVE-2019-19813)
    - [arm64] pgtable: Fix pte_accessible()
    - ALSA: hda/hdmi: Use single mutex unlock in error paths
    - ALSA: hda/hdmi: fix incorrect locking in hdmi_pcm_close
    - HID: cypress: Support Varmilo Keyboards' media hotkeys
    - [x86] Input: i8042 - allow insmod to succeed on devices without an i8042
      controller
    - HID: hid-sensor-hub: Fix issue with devices with no report ID
    - [x86] xen: don't unbind uninitialized lock_kicker_irq
    - proc: don't allow async path resolution of /proc/self components
    - [armhf] dmaengine: pl330: _prep_dma_memcpy: Fix wrong burst size
    - scsi: libiscsi: Fix NOP race condition
    - scsi: target: iscsi: Fix cmd abort fabric stop race
    - [x86] perf/x86: fix sysfs type mismatches
    - [arm64,armhf] phy: tegra: xusb: Fix dangling pointer on probe failure
    - batman-adv: set .owner to THIS_MODULE
    - scsi: ufs: Fix race between shutdown and runtime resume flow