@@ -402,6 +402,8 @@ linux (4.9.268-1) UNRELEASED; urgency=medium
   * tun: Ignore ABI changes
   * debian/patches/features/all/rt/genpatch.py: Change argument parsing to use
     argparse
+  * debian/patches/features/all/rt/genpatch.py: Add option to disable signature
+    verification
 
  -- Ben Hutchings <benh@debian.org>  Fri, 26 Mar 2021 01:42:04 +0100
 
